# python-gyazo-backup

./: .travis.yml  README.rst  setup.cfg  setup.py  tox.ini
gyazo_backup/: __init__.py  backup.py
gyazo_backup/themes/default/: index.css  index.html
