[metadata]
name = python-gyazo-backup
version = 0.4.0
author = Yusuke Miyazaki
author_email = miyazaki.dev@gmail.com
license = MIT
description = A command-tool for creating backup of Gyazo
url = https://github.com/ymyzk/python-gyazo-backup
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Utilities

[options]
packages =
    gyazo_backup
install_requires =
    Jinja2>=2.8
    progress>=1.2
    python-gyazo>=2,<3
python_requires = >=3.5, <4

[options.entry_points]
console_scripts =
    gyazo-backup=gyazo_backup:main

[options.extras_require]
test =
    flake8>=3.3.0,<4.0.0

[options.package_data]
gyazo_backup = themes/default/*

[bdist_wheel]
universal = 1
